# orchestrator

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE-SETUP.md  CLAUDE.md  OPENCODE-SETUP.md  README.md  demo_data_cafe.csv  docker-compose.yml  lovable.md  opencode.json  opencode_lovable_connection.md
.claude/: settings.json
.claude/commands/: experiment-lab-list.md  experiment-lab-refresh.md  experiment-lab-run.md
.githooks/: pre-commit
docs/: n8n-local-mcp.md  reputation-dashboard-spec.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/data/: demoData.ts
frontend/src/hooks/: useApi.ts  useSessionData.ts
frontend/src/lib/: SessionContext.tsx  adapters.ts  api.ts  types.ts
frontend/src/pages/: Alerts.tsx  Competitors.tsx  DataQuality.tsx  Labs.tsx  Locations.tsx  Overview.tsx  Predictions.tsx  Reports.tsx
frontend/src/utils/: formatters.ts
hackathon/: .env.example  .gitignore  AGENTS.md  DEMO.md  Makefile  README.md  frontend_handoff_prompt.md  lovable_prompt.md  pyproject.toml  schema.sql  schema_sqlite.sql
hackathon/api/: __init__.py  analysis.py  apify_client.py  db.py  logger.py  main.py  models.py  normalize.py
hackathon/fixtures/: apify_cached_response.json
hackathon/n8n/: workflow_1_scheduled_scrape_synthetic.json  workflow_1b_scheduled_scrape_apify.json  workflow_4_approval.json
hackathon/scripts/: seed.py  smoke_test.py
skills/experiment-lab/: SKILL.md
(+8 files in other folders)
