[project]
name = "hackathon-marketwin"
version = "0.1.0"
description = "Agentic Decision Lab / MarketTwin — hackathon subsystem (parallel to experiment-lab)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
apify    = ["apify-client>=1.7"]
test     = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]
package-dir = { "" = "." }
